servo/ports/geckolib/glue.rs
@@ -2448,6 +2448,7 @@ pub extern "C" fn Servo_StyleRule_SelectorMatchesElement(
     rule: &LockedStyleRule,
     element: &RawGeckoElement,
     index: u32,
+    host: Option<&RawGeckoElement>,
     pseudo_type: PseudoStyleType,
     relevant_link_visited: bool,
 ) -> bool {
@@ -2484,6 +2485,7 @@ pub extern "C" fn Servo_StyleRule_SelectorMatchesElement(
         };
 
         let element = GeckoElement(element);
+        let host = host.map(GeckoElement);
         let quirks_mode = element.as_node().owner_doc().quirks_mode();
         let mut nth_index_cache = Default::default();
         let visited_mode = if relevant_link_visited {
@@ -2493,13 +2495,15 @@ pub extern "C" fn Servo_StyleRule_SelectorMatchesElement(
         };
         let mut ctx = MatchingContext::new_for_visited(
             matching_mode,
-            None,
+            /* bloom_filter = */ None,
             &mut nth_index_cache,
             visited_mode,
             quirks_mode,
             NeedsSelectorFlags::No,
         );
-        matches_selector(selector, 0, None, &element, &mut ctx)
+        ctx.with_shadow_host(host, |ctx| {
+            matches_selector(selector, 0, None, &element, ctx)
+        })
     })
 }
 
